# kegtron-v1-api-proxy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml  scan.py
api/: api.py  scan.py
api/lib/: exceptions.py
api/lib/parsers/: kegtron.py
deploy/certs/: localhost.crt
deploy/local-dev/: docker-compose.yml  nginx.conf
deploy/local-dev/certs/: localhost.key
src/: api.py  scan.py
src/data/: devices.py
src/kegtron/: __init__.py  gatt.py  parser.py
src/lib/: __init__.py  config.py  exceptions.py  json.py  kegtron.py  logging.py  time.py
src/routes/: __init__.py  internal.py  public.py  rpc.py
